# AppArchive

./: CMakeLists.txt  README.md
include/: zstd_utils.h
src/: main.cpp  zstd_utils.cpp
